Fix spacing for help

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h3 {
 .help-box {
   background-color: #eaeae899;
   margin: 30px 0;
-  padding: 30px;
+  padding: 50px;
   text-align: center;
 }
 
@@ -64,6 +64,7 @@ h3 {
   max-width: 600px;
   margin: 0 auto;
   text-align: justify;
+  letter-spacing: -0.02em;
 }
 
 .help-box .help-right {
@@ -88,6 +89,11 @@ h3 {
 
   .intro-right {
     display: none;
+  }
+
+  .help-box {
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .help-box .help-right {
